xee-xpath-macros/src/snapshots/xee_xpath_macros__parse__tests__parse_not_a_signature_string.snap
---
source: xee-xpath-macros/src/parse.rs
expression: "syn::parse_str::<XPathFnOptions>(r#\"wrong\"#)"
---
Err(
    Error(
        "expected string literal",
    ),
)
