xee-xpath-macros/src/snapshots/xee_xpath_macros__parse__tests__parse_signature_with_kind.snap
---
source: xee-xpath-macros/src/parse.rs
expression: "syn::parse_str::<XPathFnOptions>(r#\"\"fn:foo() as xs:string\", context_first\"#)"
---
Ok(
    XPathFnOptions {
        signature: Signature {
            name: Spanned {
                value: Name {
                    name: "foo",
                    prefix: Some(
                        "fn",
                    ),
                    namespace: Some(
                        "http://www.w3.org/2005/xpath-functions",
                    ),
                },
                span: 0..6,
            },
            params: [],
            return_type: Item(
                Item {
                    item_type: AtomicOrUnionType(
                        String,
                    ),
                    occurrence: One,
                },
            ),
        },
        kind: Some(
            "context_first",
        ),
        signature_string: "fn:foo() as xs:string",
    },
)
